--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AT Digital</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
 
     <!-- custom css -->
     <link rel="stylesheet" href="./assets/css/style.css">
